--- a/flex/06-flex-layout/index.html
+++ b/flex/06-flex-layout/index.html
@@ -24,8 +24,8 @@
         <input type="text">
       </div>
       <div class="buttons">
-        <button>Do the thing!</button>
-        <button>Do the other thing!</button>
+        <button>Don't stop</button>
+        <button>believing!</button>
       </div>
     </div>
     <div class="footer">
